# integrationtest

./: HelloWorld.aps  HelloWorld.cpp  HelloWorld.rc  HelloWorld.sln  HelloWorld.vcxproj  HelloWorld.vcxproj.filters  ImportantLibrary.cpp  ImportantLibrary.h  README.md  resource.h
HelloWorldTester/: CMakeLists.txt  CMakeLists.txt.in  HelloWorldTester.cpp  HelloWorldTester.vcxproj  HelloWorldTester.vcxproj.filters  MockedImportantLibrary.h
foobar/: ImportantLibrary2.cpp  ImportantLibrary2.h
